--- a/style.css
+++ b/style.css
@@ -3,13 +3,16 @@ body{
     font-weight: 900;
     font-size: 20px;
     color: #f9faf8;
+    margin: 0;
+    padding: 0;
 
 }
 .header{
     width: 100%;
     height: 100%;
     border: 2px solid black;
-    margin-bottom: 20px;
+    margin: 0px;
+    padding: 0;
 }
 .logo{
     display: inline-block;
@@ -76,10 +79,14 @@ li{
 .main{
     background: white;
     color: black;
+    margin: 0;
+    padding: 0;
     
 }
 h2{
     text-align: center;
+    margin: 0;
+    padding: 20px;
 }
 .container{
     width: 100%;
@@ -88,6 +95,7 @@ h2{
     flex-direction: row;
     gap: 2px;
     justify-content: center;
+    margin: 0;
     
 }
 .inner-box{
@@ -114,4 +122,28 @@ h2{
     margin: 20px;
     font-size: 15px;
     width: 150px;
+}
+
+.container2{
+    background-color: #e5e7eb;
+    margin: 0;
+    height: 300px;
+    
+    color: #1f2937;
+    
+}
+.pr2{
+    width: 700px;
+    margin-left: 320px;
+    font-size: 30px;
+    font-weight: 100;
+    font-style: italic;
+    margin-bottom: 0;
+    margin-top: 0;
+    padding: 20px;
+}
+.thor{
+    margin-left: 750px;
+    font-size: 20px;
+    margin-top: 0;
 }
