--- a/style.css
+++ b/style.css
@@ -10,20 +10,20 @@ body{
 .header{
     width: 100%;
     height: 100%;
-    border: 2px solid black;
+   
     margin: 0px;
     padding: 0;
 }
 .logo{
     display: inline-block;
-    border: 2px solid black;
+ 
     margin-left: 150px;
     
 }
 .nav {
    display: inline-block;
    list-style-type: none;
-   border: solid 1px black;
+  
    margin-left: 500px;
 
  
@@ -32,14 +32,21 @@ li{
     list-style-type: none; 
     display: inline-block;
     margin-left:20px ;
+  
     
+}
+a{
+    color: white;
 }
 .header-extra{
     width: 100%;
     height: 100%;
-    border: 2px solid black;
+   
     display: flex;
     justify-items: center;
+    padding-bottom: 80px;
+    padding-top: 50px;
+
 }
 
 
@@ -49,21 +56,20 @@ li{
     height: 200px;
     font-size: 15px;
     display: inline-block;
-    border: 2px solid black;
+   
     margin-left:150px ;
 }
 
 .placeholder{
     display: inline-block;
-    border: 2px solid rgb(0, 0, 0);
+   
     background: gray;
     width: 400px;
-    height: 200px;
-    border: 2px solid black;
+    height: 180px;
+    
     margin-left: 100px;
-    
-    
-    
+    margin-top: 10px;
+    margin-bottom: 10px;
 
 }
 .text{
@@ -74,6 +80,9 @@ li{
 #but{
     background-color: #3882f6;
     color: white;
+    border-radius: 10px;
+    width: 90px;
+    padding: 5px;
 }
 
 .main{
@@ -109,7 +118,7 @@ h2{
 }
 
 .outer-box{
-    border: 2px solid black;
+    
     width: 180px;
     height: 300px;
     margin: 1px;
@@ -146,4 +155,50 @@ h2{
     margin-left: 750px;
     font-size: 20px;
     margin-top: 0;
+}
+.container3{
+    background-color: white;
+    margin: 0;
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+    height: 200px;
+}
+h4{
+    margin: 0;
+    width: 500px;
+    
+   
+}
+.inner-container3{
+    background-color: #3882f6;
+    height: 100px;
+    width: 1000px;
+    border-radius: 10px;
+    padding: 20px;
+    
+    
+}
+
+.inner-box4{
+    display: flex;
+    gap: 100px;
+}
+
+.pr3{
+    width: 600px;
+}
+
+.but2{
+    background-color: #3882f6;
+    color: white;
+    border: 2px solid white;
+    border-radius: 10px;
+    padding: 5px;
+    width: 120px;
+    height: 35px;
+    
+   
+   
+
 }
