--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
    display: inline-block;
    list-style-type: none;
   
-   margin-left: 500px;
+   margin-left: 400px;
 
  
 }
@@ -198,7 +198,10 @@ h4{
     width: 120px;
     height: 35px;
     
-   
-   
+}
 
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
