--- a/style.css
+++ b/style.css
@@ -17,14 +17,14 @@ body{
 .logo{
     display: inline-block;
  
-    margin-left: 150px;
+    margin-left: 450px;
     
 }
 .nav {
    display: inline-block;
    list-style-type: none;
   
-   margin-left: 400px;
+   margin-left: 350px;
 
  
 }
@@ -57,17 +57,17 @@ a{
     font-size: 15px;
     display: inline-block;
    
-    margin-left:150px ;
+    margin-left:450px ;
 }
 
 .placeholder{
     display: inline-block;
    
     background: gray;
-    width: 400px;
+    width: 500px;
     height: 180px;
     
-    margin-left: 100px;
+    margin-left: 200px;
     margin-top: 10px;
     margin-bottom: 10px;
 
@@ -139,20 +139,21 @@ h2{
     height: 300px;
     
     color: #1f2937;
+
     
 }
 .pr2{
     width: 700px;
-    margin-left: 320px;
+    margin-left: 600px;
     font-size: 30px;
     font-weight: 100;
     font-style: italic;
     margin-bottom: 0;
     margin-top: 0;
-    padding: 20px;
+    padding-top: 60px;
 }
 .thor{
-    margin-left: 750px;
+    margin-left: 1100px;
     font-size: 20px;
     margin-top: 0;
 }
@@ -162,6 +163,7 @@ h2{
     padding: 40px;
     display: flex;
     justify-content: center;
+    align-items: center;
     height: 200px;
 }
 h4{
@@ -176,6 +178,7 @@ h4{
     width: 1000px;
     border-radius: 10px;
     padding: 20px;
+   
     
     
 }
